Isotope ajax destory fix

--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,7 +1,11 @@
-= div_for event, class: "grid-item-event color-#{ event.color }", data: { start_time: "#{ event.start_time }" } do |event|
-  .card
+.grid-item-event{ id: "#{ event_id_prefix}_event_#{ event.id }", class: "color-#{ event.color }", data: { start_time: "#{ event.start_time }" }}
+  .card.lighten-5{ class: event.color }
     .card-content
+      = button_to edit_event_path(event), method: :get, remote: true do
+        %i.material-icons.right.activator more_vert
       = event.name
       %br= event.start_time.strftime('%H:%M %p')
       = event.color
+      
+      
       // = button_to 'Delete', event, class: 'card-button red-text', method: :delete, remote: true
