--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -189,3 +189,14 @@ body.controller-events {
     box-sizing: border-box;
   }
 }
+
+#new_event {
+  [type="radio"]:not(:checked),
+  [type="radio"]:checked {
+    position: absolute;
+    left: initial;
+    height: 25px;
+    width: 25px;
+    z-index: 2;
+  }
+}
