Fixed radio buttons

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -190,7 +190,7 @@ body.controller-events {
   }
 }
 
-#new_event {
+#new-event-form {
   [type="radio"]:not(:checked),
   [type="radio"]:checked {
     position: absolute;
