--- a/app/views/events/create.js.erb
+++ b/app/views/events/create.js.erb
@@ -13,4 +13,4 @@ $grid.prepend($item).isotope('insert', $item).isotope('arrange').isotope('reload
 Materialize.toast('Event successfully created', 5000, 'notice')
 
 $('#new_event')[0].reset();
-$('#<%= @date.strftime("%Y-%m-d") %>').html("<%= j render partial: 'day', locals: { events: @events } %>")
+$('#<%= @date.strftime("%Y-%m-%d") %>').html("<%= j render partial: 'day', locals: { events: @events } %>")
