--- a/app/views/events/destroy.js.erb
+++ b/app/views/events/destroy.js.erb
@@ -6,4 +6,6 @@ $grid = $('.grid-upcoming-events')
 $item = $("#upcoming_event_<%= @event.id %>")
 $grid.isotope('remove', $item).isotope('arrange')
 
+$('#<%= @date.strftime("%Y-%m-%d") %>').html("<%= j render partial: 'day', locals: { events: @events } %>")
+
 Materialize.toast('Event successfully deleted', 5000, 'notice')
