--- a/app/views/events/update.js.erb
+++ b/app/views/events/update.js.erb
@@ -7,4 +7,5 @@ $item.html("<%= j render partial: "event", locals: { event: @event, event_id_pre
 
 Materialize.toast('Event successfully updated', 5000, 'notice')
 
-<!--$('#new_event')[0].reset();-->
+$('#<%= @date.strftime("%Y-%m-%d") %>').html("<%= j render partial: 'day', locals: { events: @events } %>")
+$('#new_event')[0].reset()
