Navbar added gallery

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -7,10 +7,10 @@
           = link_to events_path, class: "" do
             Events
             %i.material-icons.left today
-        // %li
-        //   = link_to galleries_path, class: "" do
-        //     Galleries
-        //     %i.material-icons.left camera
+        %li
+          = link_to galleries_path, class: "" do
+            Galleries
+            %i.material-icons.left camera
         %li
           = link_to lists_path, class: "" do
             Lists
