--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@ $primary-color: color("blue-grey", "base") !default;
 @import "font-awesome";
 @import "chocolat";
 @import "layout";
+@import "welcome";
 @import "galleries";
 @import "events";
 
