--- a/app/views/events/_upcoming_events.html.haml
+++ b/app/views/events/_upcoming_events.html.haml
@@ -7,4 +7,4 @@
     = render partial: events_for_date, locals: { event_id_prefix: event_id_prefix }
   
 - else
-  .upcoming-events.center-align.stamp No upcoming events
+  %h6.upcoming-events.center-align.stamp No upcoming events
