--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,26 +10,31 @@
 
 
 
-.btn-sharp {
-  padding: 14px 24px;
-  border: 0 none;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  color: #ffffff;
-  border-radius: 0;
-}
+// .btn-sharp {
+//   padding: 14px 24px;
+//   border: 0 none;
+//   font-weight: 700;
+//   letter-spacing: 1px;
+//   text-transform: uppercase;
+//   color: #ffffff;
+//   border-radius: 0;
+// }
  
-.btn-sharp:hover {
-  background: #33a6cc;
-  text-decoration: none;
-}
+// .btn-sharp:hover {
+//   background: #33a6cc;
+//   text-decoration: none;
+// }
 
-.btn-sharp-todos {
-  background: #0099cc;
-}
+// .btn-sharp-todos {
+//   background: #0099cc;
+// }
 
-.btn-sharp-lists {
-  background: #0044cc;
-}
+// .btn-sharp-lists {
+//   background: #0044cc;
+// }
+ 
+.upcoming-events-col {
+  background: #3F51B5;
+  color: white;
+} 
  
