--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -2,16 +2,14 @@
 %html
   %head
     %title Improv
-    = stylesheet_link_tag "application"
-    = javascript_include_tag "application"
+    = stylesheet_link_tag 'application', "public"
+    = javascript_include_tag "public"
     = csrf_meta_tags
+    %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1", :name => "viewport"}/
   %body{:class => "controller-#{params[:controller]}"}
     .content
       #modal-holder
-      = render "shared/navbar"
       = render "shared/flash"
       = yield
-    .footer
-      = render "shared/footer"
     
