--- a/app/views/public/welcome/index.html.haml
+++ b/app/views/public/welcome/index.html.haml
@@ -1,7 +1,5 @@
 #index-banner.section.no-pad-bot
   .container
-    %br/
-    %br/
     %h1.header.center.orange-text Public access
     
 .container
@@ -11,19 +9,22 @@
       .col.s12.m4
         .icon-block
           %h2.center.light-blue-text
-            %i.material-icons flash_on
+            %i.material-icons.large  flash_on
           %h5.center Physics
           %p.light Darbi n stuff, n bildes
+          
+      .col.s12.m4
+        = link_to public_hours_path, style: 'color: initial' do
+          .icon-block
+            %h2.center.light-blue-text
+              %i.material-icons.large view_list
+            %h5.center Stundiņ sarakstiņ
+            %p.light Kad negribas vērt vaļā ortusu
+          
       .col.s12.m4
         .icon-block
           %h2.center.light-blue-text
-            %i.material-icons group
-          %h5.center Stundiņ sarakstiņ
-          %p.light Kad negribas vērt vaļā ortusu
-      .col.s12.m4
-        .icon-block
-          %h2.center.light-blue-text
-            %i.material-icons settings
+            %i.material-icons.large  settings
           %h5.center Placeholder
           %p.light Placeholder
   %br/
