--- a/app/views/layouts/sign_in.html.haml
+++ b/app/views/layouts/sign_in.html.haml
@@ -2,16 +2,11 @@
 %html
   %head
     %title Improv
-    = stylesheet_link_tag "application"
-    = javascript_include_tag "application"
+    = stylesheet_link_tag "application", params[:controller], 'https://fonts.googleapis.com/css?family=Lato:100', 'https://fonts.googleapis.com/css?family=Raleway:300'
+    = javascript_include_tag "application", params[:controller]
     = csrf_meta_tags
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1", :name => "viewport"}/
-  %body{:class => "controller-#{params[:controller]}"}
-    .content
-      #modal-holder
-      = render "shared/navbar"
-      = render "shared/flash"
-      = yield
-    .footer
-      = render "shared/footer"
+    %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
+  %body{:class => "controller-#{params[:controller].parameterize}"}
+    = yield
     
