--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -36,4 +36,11 @@
 .upcoming-events-col {
   color: white;
 } 
+
+.welcome-parallax {
+  .parallax-container {
+    height: 400px;
+  }
+  // margin-top: -300px;
+}
  
