--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,8 +1,14 @@
 .row
+  .welcome-parallax
+    .parallax-container
+      .parallax
+        = cl_image_tag 'webpage/shared/home/jack-catterall-6268'
+
+.row
   .col.s2.upcoming-events-col
     = render partial: 'event_for_upcoming', collection: @events_week_in_advance, as: :event, locals: { event_id_prefix: 'upcoming' }
   .col.s7
-    = image_tag 'http://placehold.it/2000x500', class: 'responsive-img'
+   
     .col.s2.red
     .col.s7.blue
     %h1= link_to "Sign out", destroy_user_session_path, :method => :delete
