--- a/app/views/public/welcome/physics.html.haml
+++ b/app/views/public/welcome/physics.html.haml
@@ -1,2 +1,2 @@
 %h1.center-align= link_to 'Back', public_root_path
-= cl_image_tag 'webpage/public/hours', style: 'width: 100% '
+= cl_image_tag 'webpage/public/fiz_1', style: 'width: 100% '
