--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body{:class => "controller-#{params[:controller]}"}
     .content
       #modal-holder
-      = render "shared/navbar"
+      = render "shared/navbar/navbar"
       = render "shared/flash"
       = yield
     .footer
