home.html changes

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -33,6 +33,10 @@
 //   background: #0044cc;
 // }
  
+body.controller-welcome {
+  background-color: #f1f1f1
+} 
+ 
 .upcoming-events-col {
   color: white;
 } 
