--- a/app/views/gallery_images/_gallery_image.html.haml
+++ b/app/views/gallery_images/_gallery_image.html.haml
@@ -1,4 +1,4 @@
-= div_for gallery_image, class: 'gallery-grid-image-item' do
+.gallery-grid-image-item{id: gallery_image.id }
   = button_tag class: 'gallery-button-default btn waves-effect delete-gallery-image-button' do
     = icon('fa fa-trash-o fa-lg')
   .delete-gallery-image-confirmation
