List seed, updated divs

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -8,9 +8,9 @@
   padding-bottom: 20px;
 }
 
-#new-list-form {
-  display: none;
-}
+// #new-list-form {
+//   display: none;
+// }
 
 .waves-effect.waves-brown .waves-ripple {
   /* The alpha value allows the text and background color
