--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,4 +1,4 @@
-= div_for list do
+.list{ id: list.id }
   .col.s6
     %ul.collection.hoverable
       %ul.collapsible-without-borders.collapsible{"data-collapsible" => "accordion"}
