--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,16 +1,12 @@
-.row.hide-on-small-only
-  .welcome-parallax
-    .parallax-container
-      .parallax
-        = cl_image_tag 'webpage/shared/home/jack-catterall-6268'
-
 .row
-  .col.s3.upcoming-events-col
+  .col.s12.m3.upcoming-events-col
+    .row
+      %h5.center Upcoming events
     = render partial: 'event_for_upcoming', collection: @events_week_in_advance, as: :event, locals: { event_id_prefix: 'upcoming' }
-  .col.s6
+  .col.s12.m6
     %h1= link_to "Sign out", destroy_user_session_path, :method => :delete
     .col.s3
-  .col.s3
+  .col.s12.m3
     %h6.center-align.tooltipped(data-position="bottom" data-delay="50" data-tooltip='#{render partial: 'shared/feeds/tooltip', locals: {subscribed_feeds: @subscribed_feeds}}')
       My feeds:
     - @entries.each do |entry|
