--- a/app/views/welcome/_event_for_upcoming.html.haml
+++ b/app/views/welcome/_event_for_upcoming.html.haml
@@ -1,5 +1,5 @@
 .grid-item-event
   .row
-    .col.m2= event.start_time.strftime('%H:%M %p')
-    .col.m9.offset-m1= event.name
+    .col.s2.m2.l2= event.start_time.strftime('%H:%M')
+    .col.s9.m9.l9.offset-m1= event.name
     
