--- a/app/views/events/_day.html.haml
+++ b/app/views/events/_day.html.haml
@@ -1,3 +1,13 @@
-- if events.present?
-  - events.group_by {|event| event.color }.each do |color, events_for_color|
-    .event-dot{class: color}
+- e = events.map {|event| event["icon"] }
+- e.reject! &:blank?
+- unless e.blank?
+  .icons-container
+    - events.group_by {|event| event.icon }.each do |icon, events_for_color|
+      - if icon.present?
+        %i.event-icon{ class: "fa #{ icon }"  }
+  .content
+.date{"data-visual-label-day": date.strftime('%e') }
+.eqi-container.center-align
+  - if events.any?
+    - events.group_by {|event| event.color }.each do |color, events_for_color|
+      .event-dot{class: color}
