--- a/app/views/events/fetch.js.erb
+++ b/app/views/events/fetch.js.erb
@@ -13,4 +13,4 @@ $('#new-event-form').html("<%= j render partial: 'form', locals: { event: @event
 
 
 $('.today').removeClass('today')
-$('#<%= @date %>').parent().parent().addClass('today')
+$('#<%= @date %>').addClass('today')
