--- a/app/views/events/update.js.erb
+++ b/app/views/events/update.js.erb
@@ -7,5 +7,5 @@ $item.html("<%= j render partial: "event", locals: { event: @event, event_id_pre
 
 Materialize.toast('Event successfully updated', 5000, 'notice')
 
-$('#<%= @date.strftime("%Y-%m-%d") %>').html("<%= j render partial: 'day', locals: { events: @events } %>")
+$('#<%= @date.strftime("%Y-%m-%d") %>').html("<%= j render partial: 'day', locals: { events: @events, date: @date } %>")
 $('#new_event')[0].reset()
