--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -24,7 +24,7 @@
               - date_range.each_slice(7) do |week|
                 %tr
                   - week.each do |day|
-                    = content_tag :td, class: calendar.td_classes_for(day) << 'center-align', data: { url: fetch_events_path, start_time: day } do
+                    = content_tag :td, class: calendar.td_classes_for(day) << 'center-align', id: day, data: { url: fetch_events_path, start_time: day } do
                       - if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block)
                         - capture_haml(day, sorted_events.fetch(day, []), &block)
                       - else
