--- a/app/views/messages/_message_form.html.haml
+++ b/app/views/messages/_message_form.html.haml
@@ -1,7 +1,3 @@
-= form_for message, remote: true, authenticity_token: true do |f|
-  = f.label :your_message
-  \:
-  \#{f.text_area :content, class: "form-control", data: {textarea: "message"}}
-  
-  \#{f.hidden_field :chatroom_id, value: chatroom.id}
-  \#{f.submit "send", class: "btn btn-primary", style: "display: none", data: {send: "message"}}
+= form_for @message, remote: true do |f|
+  = f.text_area :content
+  = f.submit "Send"
