--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -8,7 +8,7 @@
   .col.s3.upcoming-events-col
     = render partial: 'event_for_upcoming', collection: @events_week_in_advance, as: :event, locals: { event_id_prefix: 'upcoming' }
   .col.s6
-  
+    = render 'messages/message_form'
 
 
   .col.s3
