--- a/app/views/messages/_message_form.html.haml
+++ b/app/views/messages/_message_form.html.haml
@@ -1,3 +1,3 @@
 = form_for @message, remote: true do |f|
-  = f.text_area :content
+  = f.text_area :content, data: {behavior: 'room_speaker' }
   = f.submit "Send"
