--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -9,7 +9,7 @@
     = render partial: 'event_for_upcoming', collection: @events_week_in_advance, as: :event, locals: { event_id_prefix: 'upcoming' }
   .col.s6
     #messages
-    
+      = render @messages
     = render 'messages/message_form'
 
 
