--- a/app/views/galleries/_form.html.haml
+++ b/app/views/galleries/_form.html.haml
@@ -1,7 +1,7 @@
 = form_for @gallery do |f|
   #hide-whole
     .hide-input
-      = f.file_field(:image)
+      = f.file_field(:profile_image)
     .fake-button.btn.waves-effect
       Add
       = icon 'fa fa-picture-o fa-lg', id: 'gallery-image-icon'
