--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,3 +1,3 @@
 .message
   .message-user
-    = " #{ message.user.email } : #{ message.content } "
+    = " #{ message.user.username } : #{ message.content } "
