--- a/app/views/shared/navbar/_links.html.haml
+++ b/app/views/shared/navbar/_links.html.haml
@@ -17,6 +17,10 @@
     
 - if user_signed_in?
   %li= link_to "Sign out", destroy_user_session_path, :method => :delete
+  %li
+    = link_to edit_user_registration_path do
+      = icon('fa fa-user left')
+      Profile
 - else
   %li
     = link_to "Sign in", new_user_session_path 
